# sozune-redirectionio

./: .gitignore  Cargo.toml  PLAN-v2.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
patches/chrono/: Cargo.toml
patches/getrandom/: Cargo.toml
patches/getrandom/src/: error.rs
patches/redirectionio/: .cargo_vcs_info.json  Cargo.toml
patches/redirectionio/src/filter/html_body_action/: body_prepend.rs
patches/redirectionio/tests/test_examples/: header_override.out.json
src/: lib.rs  translate.rs
tests/: integration.rs
