[package]
name = "sozune-redirectionio"
version = "0.2.0"
edition = "2021"
description = "A redirection.io redirect engine as an http-wasm plugin for Sōzune (local matching, no agent)."
license = "MIT"
repository = "https://github.com/kemeter/sozune-redirectionio"

[lib]
crate-type = ["cdylib"]

[dependencies]
# redirection.io's own rule engine, matched locally in the guest. `router` is
# needed to build a Router and derive an Action from matched rules.
redirectionio = { version = "3.2.0", default-features = false, features = ["router"] }
serde_json = "1"
# Referenced by the getrandom custom backend in src/lib.rs (see .cargo/config.toml).
getrandom = "0.4"
# Used only by the host-side translator module (src/translate.rs), which is
# compiled out of the wasm guest.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
http-wasm-host = { path = "../http-wasm" }

# The redirectionio crate (and its chrono/getrandom deps) hard-wire wasm-bindgen
# (JS) deps on wasm32, assuming a browser host. Sōzune's host is wasmtime (no
# JS), so those imports can't be satisfied. These vendored copies drop the JS
# deps; the final wasm then imports nothing but the http-wasm host functions.
# See PLAN-v2.md "The 3 crate patches".
[patch.crates-io]
redirectionio = { path = "patches/redirectionio" }
chrono = { path = "patches/chrono" }
getrandom = { path = "patches/getrandom" }

[profile.release]
opt-level = "s"
lto = true
strip = true
